--- a/markup/photos.html
+++ b/markup/photos.html
@@ -30,93 +30,74 @@
         <div class="uk-grid uk-child-width-1-2@s uk-child-width-1-3@m">
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
           <div>
             <div class="uk-card uk-card-default uk-margin-medium-bottom">
-                <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-margin-remove-bottom">Title</h3>
+                <div class="uk-card-media-top">
+                    <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                 </div>
                 <div class="uk-card-body">
+                    <h3 class="uk-card-title">Media Top</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-                <div class="uk-card-footer">
-                    <a href="#" class="uk-button uk-button-text">Read more</a>
                 </div>
             </div>
           </div>
         </div>
-        <ul class="uk-pagination uk-flex-center" uk-margin>
-            <li><a href="#"><span uk-pagination-previous><svg width="7" height="12" viewBox="0 0 7 12" xmlns="http://www.w3.org/2000/svg" ratio="1"><polyline fill="none" stroke="#000" stroke-width="1.2" points="6 1 1 6 6 11"></polyline></svg></span></a></li>
-            <li><a href="#">1</a></li>
-            <li class="uk-disabled"><span>...</span></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">6</a></li>
-            <li class="uk-active"><span>7</span></li>
-            <li><a href="#">8</a></li>
-            <li><a href="#"><span uk-pagination-next><svg width="7" height="12" viewBox="0 0 7 12" xmlns="http://www.w3.org/2000/svg" ratio="1"><polyline fill="none" stroke="#000" stroke-width="1.2" points="1 1 6 6 1 11"></polyline></svg></span></a></li>
-        </ul>
+        <div class="uk-load-more uk-text-center" uk-margin>
+            <button class="uk-button uk-button-primary">Load more</button>
+        </div>
       </div>
   </div>
   </main>
